# dev-agent-lens

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.amd64  ENG2-723_730_FINDINGS.md  PHOENIX_SYNC_TEST_RESULTS.md  README-AMD64.md  README.md  SCHEMA.md  STATUS.md  TECH_DEBT_MARKDOWN_EXPORT.md  amd64_litellm_pre_call_utils.py  claude-lens  claude-proxy  collector-config.yaml  common_utils.py  docker-compose.yml  extract_phoenix_traces.py  litellm_config.yaml  litellm_config_arize.yaml  litellm_config_phoenix.yaml  litellm_config_test_phoenix.yaml  pyproject.toml  requirements.txt  start_claude.sh
.claude/commands/: analyze-session.md
dev_agent_lens/: __init__.py  config.py  patterns.py
dev_agent_lens/analysis/: __init__.py  aggregate.py  chains.py  churn.py  classify.py  failures.py  sessions.py  subsets.py  threads.py  tokens.py
dev_agent_lens/cli/: __init__.py  main.py
dev_agent_lens/clients/: __init__.py  arize.py  (+4 more)
docs/: markdown_export_pipeline_documentation.md  parquet-optimization.md  proxy-setup.md  pyarrow-vs-duckdb.md  querying.md  quickstart_session_export.md  sync-historical.md  unified_markdown_format.md
examples/: README.md
fly/: README.md  litellm.fly.toml  litellm_config_fly.yaml  phoenix.fly.toml  router.fly.toml
scripts/: .env.example  .gitignore  README.md  analyze_sessions.py  arize_session_analysis_report.md  compare_spans.py  export_arize_data.py  export_phoenix_data.py  export_traces.py  main.py  pyproject.toml  session_analysis_report.txt  validate_export.py
tests/: __init__.py  test_config.py  test_validate_export.py
(+108 files in other folders)
